PyMaker/datas/object2/RawHTML/i15501/Python_DOC_referPages.install-configparser-error-on-windows-7.txt
<div class="post-text" itemprop="text">
<p>When i install module configparser on windows 7 using command "pip install ConfigParser", I receive an error: </p>
<p>SyntaxError: invalid syntax</p>
<blockquote>
<p>E:\KIENNH\projects\Projs\acs&gt;pip install ConfigParser
  Downloading/unpacking ConfigParser   Downloading
  configparser-3.3.0r2.tar.gz   Running setup.py
  (path:C:***\ConfigParser\setup.py) egg_info for package ConfigParser
      Traceback (most recent call last):
        File "", line 3, in 
        File "C:\Python34\lib\site-packages\setuptools__init__.py", line 5, in 
          import distutils.core
        File "C:\Python34\lib\distutils\core.py", line 18, in 
          from distutils.config import PyPIRCCommand
        File "C:\Python34\lib\distutils\config.py", line 7, in 
          from configparser import ConfigParser
        File "C:***\ConfigParser\configparser.py", line 397
          _KEYCRE = re.compile(ur"%(([^)]+))s")
                                               ^
      SyntaxError: invalid syntax
      Complete output from command python setup.py egg_info:
      Traceback (most recent call last):</p>
<p>File "", line 3, in </p>
<p>File "C:\Python34\lib\site-packages\setuptools__init__.py", line 5,
  in </p>
<pre><code>import distutils.core
</code></pre>
<p>File "C:\Python34\lib\distutils\core.py", line 18, in </p>
<pre><code>from distutils.config import PyPIRCCommand
</code></pre>
<p>File "C:\Python34\lib\distutils\config.py", line 7, in </p>
<pre><code>from configparser import ConfigParser
</code></pre>
<p>File "C:***\configparser.py", line 397</p>
<pre><code>_KEYCRE = re.compile(ur"%\(([^)]+)\)s")

                                     ^
</code></pre>
<p>SyntaxError: invalid syntax</p>
</blockquote>
<p>Ps: I have found a similar question here, but there no answer!:
<a href="https://github.com/flyingrub/scdl/issues/8" rel="nofollow">https://github.com/flyingrub/scdl/issues/8</a></p>
</div>
<div class="post-text" itemprop="text">
<p><code>configparser</code> is included in the standard library.</p>
<p><a href="https://docs.python.org/3/library/configparser.html" rel="nofollow">https://docs.python.org/3/library/configparser.html</a></p>
<p>Just use <code>import configparser</code></p>
</div>
<span class="comment-copy">ConfigParser is equal configparser, thank you!!!</span>
